<resources>
    <string name="app_name">Library guide</string>
    <string name="title_activity_chooser_singin">Library guide</string>
    <!--//<string name="facebook_app_id">156588275066033</string>-->
    <string name="facebook_app_id">1400115610100283</string>
    <string name="fb_login_protocol_scheme">fb1400115610100283</string>
    <!--
    <string name="fb_login_protocol_scheme">fb156588275066033</string>
-->
    <string name="google_maps_key">AIzaSyB4fp4Tgthn5lLEaps6BM_uGHo0ZVMn3eM</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="phone">Phone Number</string>


    <string-array name="spinnerArray">
        <item>Normal user</item>
        <item>Publisher</item>
        <item>Library</item>
        <item>University</item>
        <item>Company</item>
    </string-array>

    <string name="title_activity_home">Library guide</string>
    <string name="invalid_firstName">invalid First name</string>
    <string name="invalid_lastName">invalid Last name</string>
    <string name="invalidEmail">invalid email</string>
    <string name="invalid_url">invalid url</string>
    <string name="select_country">Select country</string>
    <string name="select_library_type">Select library type</string>
    <string name="type_message">type message......</string>
    <string name="welcome_to_library_guide">Welcome to, Library Guide</string>
    <string name="sign_in_with_my_account">Sign in with my account</string>
    <string name="facebook_signin">Sign in with Facebook</string>
    <string name="UserId">UserId</string>
    <string name="name">Name</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="update_profile">update profile</string>
    <string name="enter_library_address_city_zipcode">Enter library Address,City,Zipcode</string>
    <string name="submit">Submit</string>
    <string name="user">User</string>
    <string name="library">Library</string>
    <string name="publisher">Publisher</string>
    <string name="university">University</string>
    <string name="company">Company</string>
    <string name="confirm">Confirm</string>
    <string name="more">More</string>
    <string name="open_profile">Open Profile</string>
    <string name="send_message">Send Message</string>
    <string name="cancel">Cancel</string>
    <string name="address">ADDRESS :</string>
    <string name="distance">DISTANCE :</string>
    <string name="recover_account">Recover your account.We will send you a link to change your password.</string>
    <string name="library_app">Library guide</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="contacts">Contacts</string>
    <string name="requirements">Requirements</string>
    <string name="required">required</string>
    <string name="lib_name">Library name</string>
    <string name="lib_type">Library Type</string>
    <string name="country">Country</string>
    <string name="reg_address">Address</string>
    <string name="user_name">Username</string>
    <string name="pass">Password</string>
    <string name="sign_inbtn">Sign In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_up">sign up</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password ?</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="signup_now">Signup Now.</string>
    <string name="details">Details :</string>
    <string name="add_photo">Add Photo</string>
    <string name="f_name">First name</string>
    <string name="l_name">Last name</string>
    <string name="hi_there_i_m_here_using_library_app">Hi there, I\'m here using Library App</string>
    <string name="town">Town</string>
    <string name="site">Website</string>
    <string name="uni_name">University name</string>
    <string name="uni_major">University Major</string>
    <string name="invalid_phone">invalid phone number</string>
    <string name="network_connection">Error Contacting :Check network connection please contact Wi-Fi or contact Mobile-data</string>
    <string name="error">Error</string>
    <string name="something_haywire">Something went haywire</string>
    <string name="lib_search">Library Search</string>
    <string name="librart_name">library name</string>
    <string name="pub_name">publisher name</string>
    <string name="pub_search">Publisher Search</string>
    <string name="university_name">university name</string>
    <string name="uni_search">University Search</string>
    <string name="lib_services">Libraries services</string>
    <string name="publishers">Publishers</string>
    <string name="libraries">Libraries</string>
    <string name="universities">Universities</string>
    <string name="help">help</string>
    <string name="kilo_m">Km</string>
    <string name="distance_">Distance</string>
    <string name="phone_empty">phone number shouldn\'t be empty</string>
    <string name="email_empty">email address shouldn\'t be empty</string>
    <string name="country_empty">country shouldn\'t be empty</string>
    <string name="wait_update_profile">Wait for updating profile</string>
    <string name="signout">Sign out ?</string>
    <string name="out">Sign out</string>
    <string name="enter_lib_loc">Please enter library location</string>
    <string name="invalid_address">invalid address</string>
    <string name="ser_not_found">service not available</string>
    <string name="ser_valid">service is available</string>
    <string name="per_not_granted">permission not granted</string>
    <string name="sel_opt">Select Options</string>
    <string name="no_result">no results</string>
    <string name="invalid_username">invalid username</string>
    <string name="empty_field">empty field</string>
    <string name="invalid_password">invalid password</string>
    <string name="sin_in">SignIn....</string>
    <string name="inv_fn">invalid first name</string>
    <string name="inv_ln">invalid last name</string>
    <string name="inv_pn">invalid phone number</string>
    <string name="inv_country">invalid country</string>
    <string name="inv_address">invalid address</string>
    <string name="inv_town">invalid town</string>
    <string name="inv_lib_name">invalid library name</string>
    <string name="inv_name">invalid name</string>
    <string name="inv_major">invalid major</string>
    <string name="inv_site">invalid site url</string>
    <string name="sel_lib_loc">Select Library Location...</string>
    <string name="lib_loc">Your current location is the library location ?</string>
    <string name="y">yes</string>
    <string name="select_loc">Select Location</string>
    <string name="sign_in">SignIn....</string>
    <string name="active_now">Active now</string>
    <string name="users">Users</string>
    <string name="libs">Libraries</string>
    <string name="companies">Companies</string>
    <string name="search">search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="nearby">Nearby</string>
    <string name="news">News</string>
    <string name="jobs">Jobs</string>
    <string name="ads">Ads</string>
    <string name="settings">Settings</string>
    <string name="chats">Chats</string>
    <string name="who_are_you">who are you ?</string>
    <string name="normal_user">Normal user</string>
    <string name="spn_pub">Publisher</string>
    <string name="spin_lib">Library</string>
    <string name="spin_uni">University</string>
    <string name="spin_comp">Company</string>
    <string name="comp_name">Company name</string>
    <string name="view_location">view location</string>
    <string name="ch_photo">choose profile photo</string>
    <string name="no_data_found">No data founded please check user type</string>
    <string name="nodata_2">No data founded please check user type.if you don’t have an account please create one</string>
    <string name="nofriends">You have no friends.</string>
    <string name="there_are_no_publishers_to_display">There are no publishers to display</string>
    <string name="there_are_no_universities_to_display">There are no universities to display</string>
    <string name="there_are_no_libraries_to_display">There are no libraries to display</string>
    <string name="there_are_no_companies_to_display">There are no companies to display</string>
    <string name="there_is_no_news_to_display">There is no news to display</string>
    <string name="there_are_no_jobs_to_display">There are no jobs to display</string>
    <string name="there_are_no_results">There are no results</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="done">done</string>
    <string name="enter_email_address">Enter email Address</string>
    <string name="empty_name">name shouldn\'t be empty</string>
    <string name="there_are_no_ads_to_display">There are no ads to display</string>
    <string name="prof_up_suc">Profile updated successfully</string>

    <integer-array name="fab_colors">
        <item>@color/base</item>
        <item>@color/centercolor</item>
        <item>@color/colorPrimary</item>
        <item>@color/label</item>
        <item>@color/base</item>
    </integer-array>


    <string name="intro1">Select Login</string>
    <string name="intro2">Profile Screen</string>
    <string name="intro3">Near By</string>
    <string name="intro4">Choose Near By </string>
    <string name="intro5">Chat</string>
    <string name="home1">Select The way to Login</string>
    <string name="home2">The Profile Screen to show your data and can update it.</string>
    <string name="home3">Near by to shwo the nearest publisher ,library or university </string>
    <string name="home4">when You select the near by user</string>
    <string name="home5">chat screen you can see user and make friands and chat with them</string>
    <string name="open_gps">Open GPS so the app can determine your location.</string>
    <string name="ok">OK</string>
    <string name="field_req">This field required</string>
    <string name="search3">Search</string>
</resources>
