<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:title="@string/chats"
    app:showAsAction="never"
    android:icon="@drawable/chat_icon"
    android:orderInCategory="100"
    />
    <item
        android:title="@string/universities"
        app:showAsAction="never"
        android:icon="@drawable/university_icon"
        android:orderInCategory="100"
        />
    <item
        android:title="@string/libraries"
        app:showAsAction="never"
        android:icon="@drawable/library_icon"
        android:orderInCategory="100"
        />
    <item
        android:title="@string/publishers"
        app:showAsAction="never"
        android:icon="@drawable/publisher_icon"
        android:orderInCategory="100"
        />

</menu>