<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    >
    <TextView
        android:id="@+id/open_profile_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_profile"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/centercolor"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="@dimen/_5sdp"
        android:clickable="true"
        android:background="@drawable/item_search_bg"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/whit_gray"
        android:layout_marginBottom="@dimen/_5sdp"

        />
    <TextView
        android:id="@+id/send_msg_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/centercolor"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="@dimen/_5sdp"
        android:clickable="true"
        android:background="@drawable/item_search_bg"
        />
    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_32sdp"
        android:text="@string/cancel"
        android:layout_gravity="right|center_vertical"
        android:background="@drawable/cancel_btn_alertdialog"
        android:textColor="@color/base"
        android:layout_marginBottom="@dimen/_5sdp"
        android:textSize="@dimen/_11sdp"

        />
</LinearLayout>