<?xml version="1.0" encoding="utf-8"?>
<com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/screengradint">
    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/logohome"

            />
        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            android:text="@string/welcome_to_library_guide"
            app:reflectionColor="@color/home_toolbar_start"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_below="@+id/logo"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgetPassword_FloatLabeledEditText"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/recover_account"
        android:textColor="@color/base"
        android:textSize="@dimen/_12sdp"
        />
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/forgetPassword_FloatLabeledEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base"
        android:layout_centerInParent="true"


        >
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email_icons"
            android:textSize="@dimen/_14sdp"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail_address"
            android:id="@+id/forgetPassword_email"
            android:gravity="left|center_vertical"
            android:drawablePadding="@dimen/_5sdp"

            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <Button
            android:id="@+id/forgetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/base"
            android:textSize="@dimen/_14sdp"
            android:background="@drawable/button_bg"
            android:textAllCaps="false"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:layout_below="@+id/forgetPassword_FloatLabeledEditText"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_alignParentRight="true"


            />
</com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>