<?xml version="1.0" encoding="utf-8"?>
<com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/logohome"

            />
        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            android:text="@string/welcome_to_library_guide"
            app:reflectionColor="@color/home_toolbar_start"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_below="@+id/logo"
            />
    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_expandlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_60sdp"
        app:ael_expanded="false"
        app:ael_duration="1000"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1sdp"
                android:background="@color/base"
                >
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/username"
                    android:hint="@string/user_name"
                    android:padding="@dimen/_3sdp"
                    android:textSize="@dimen/_14sdp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:gravity="left|center_vertical"


                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/base"

                >
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/pass_icon"
                    android:hint="@string/pass"
                    android:textSize="@dimen/_14sdp"
                    android:padding="@dimen/_3sdp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:gravity="left|center_vertical"
                    android:maxLength="15"

                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >



                    <TextView
                        android:id="@+id/forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_password"
                        android:singleLine="true"
                        android:textColor="@color/base"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal"
                        android:layout_centerVertical="true"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:layout_alignParentRight="true"
                        android:clickable="true"

                        />

                    <CheckBox
                        android:id="@+id/remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:textColor="@color/base"
                        app:backgroundTint="@color/colorPrimary"
                        app:buttonTint="@color/colorPrimary"
                        android:checked="false"
                        android:textSize="@dimen/_13sdp"
                        android:layout_alignParentLeft="true"

                        />

            </RelativeLayout>


                <Button
                    android:id="@+id/signinBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_inbtn"
                    android:textColor="@color/base"
                    android:textAllCaps="false"
                    android:background="@drawable/button_bg"
                    android:textSize="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"

                    />


        </LinearLayout>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


     <LinearLayout

         android:id="@+id/signUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:clickable="true"
         android:descendantFocusability="blocksDescendants"
         android:background="@drawable/signup_container_ln"

         >
         <TextView
             android:id="@+id/login_fragment_signuptv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/don_t_have_an_account_yet"
             android:textColor="@color/centercolor"
             android:textSize="@dimen/_12sdp"
             android:clickable="false"
             android:paddingTop="@dimen/_2sdp"
             android:paddingBottom="@dimen/_2sdp"
             android:longClickable="false"

             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/signup_now"
             android:textColor="@color/base"
             android:textSize="@dimen/_12sdp"
             android:clickable="false"
             android:paddingTop="@dimen/_2sdp"
             android:paddingBottom="@dimen/_2sdp"
             android:longClickable="false"

             />
     </LinearLayout>

    </com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>


